--- a/index.html
+++ b/index.html
@@ -71,16 +71,15 @@
     </div>
     
     <div class="content">
-        <h1>Welcome to My Website</h1>
+        <h1 style="color: rgb(50, 212, 50);">BGX</h1>
         <p>Copy your account information below:</p>
         <div class="account-info">
-            <h2>Account Info</h2>
-            <p>Username:</p>
-            <input type="text" id="username" value="yourUsername" readonly>
-            <button onclick="copyText('username')" class="btn-copy">Copy Username</button>
-            <p>Password:</p>
-            <input type="text" id="password" value="yourPassword" readonly>
-            <button onclick="copyText('password')" class="btn-copy">Copy Password</button>
+            <p style="font-weight: bold;">Username:</p>
+            <input type="text" id="username" value="thisisforbgx8" readonly>
+            <button onclick="copyText('username')" class="btn-copy">Copy tên đăng nhập</button>
+            <p style="font-weight: bold;">Password:</p>
+            <input type="text" id="password" value="111223hung" readonly>
+            <button onclick="copyText('password')" class="btn-copy">Copy mật khẩu</button>
         </div>
     </div>
     
