--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <h1 style="color: rgb(50, 212, 50);">BGX</h1>
         <p>Copy your account information below:</p>
         <div class="account-info">
-            <p style="font-weight: bold;">Username:</p>
+            <p style="font-weight: bold;">Tên đăng nhập:</p>
             <input type="text" id="username" value="thisisforbgx8" readonly>
             <button onclick="copyText('username')" class="btn-copy">Copy tên đăng nhập</button>
-            <p style="font-weight: bold;">Password:</p>
+            <p style="font-weight: bold;">Mật khẩu:</p>
             <input type="text" id="password" value="111223hung" readonly>
             <button onclick="copyText('password')" class="btn-copy">Copy mật khẩu</button>
         </div>
