--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
     </div>
     
-    <div class="content" id="copyAccount" style="display: block;">
+    <div class="content show" id="copyAccount">
         <h1 style="color: rgb(50, 212, 50);">BGX</h1>
         <p>Đăng nhập:</p>
         <div class="account-info">
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class="content" id="createAccount" style="display: none;">
+    <div class="content" id="createAccount">
       <h1 style="color: rgb(50, 212, 50);">BGX</h1>
       <p>Tạo acc:</p>
       <div class="account-info">
@@ -94,7 +94,7 @@
       </div>
   </div>
 
-  <div class="content" id="3" style="display: none;">
+  <div class="content" id="3">
     <h1 style="color: rgb(50, 212, 50);">3</h1>
     <p>Tạo acc:</p>
     <div class="account-info">
@@ -104,7 +104,7 @@
         <input type="text">
     </div>
 </div>
-<div class="content" id="4" style="display: none;">
+<div class="content" id="4">
   <h1 style="color: rgb(50, 212, 50);">4</h1>
   <p>Tạo acc:</p>
   <div class="account-info">
@@ -114,7 +114,7 @@
       <input type="text">
   </div>
 </div>
-<div class="content" id="5" style="display: none;">
+<div class="content" id="5">
   <h1 style="color: rgb(50, 212, 50);">5</h1>
   <p>Tạo acc:</p>
   <div class="account-info">
