--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     <div class="content" id="createAccount">
         <h1 style="color: rgb(50, 212, 50);">BGX</h1>
         <p>Tạo acc:</p>
+        <div class="button-check-container">
+          <button class="button-check">Button 1</button>
+          <button class="button-check">Button 2</button>
+      </div>
+      
         <div class="account-info">
             <p style="font-weight: bold;">Tên đăng nhập:</p>
             <input type="text">
