--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
     </div>
-    <h1 style="position: absolute;top: 190px;" class="banner">Lô đẹp hôm nay - Tip kèo bong bánh ⚽️</h1>
+    <h1 style="position: absolute;top: 190px;" class="banner no-select">Lô đẹp hôm nay - Tip kèo bong bánh ⚽️</h1>
     <div class="content show" id="copyAccount">
         <h1 style="color: rgb(50, 212, 50);">BGX</h1>
         <p>Đăng nhập:</p>
