--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <h1 style="position: absolute;top: 190px;" class="banner no-select">Lô đẹp hôm nay - Tip kèo bong bánh ⚽️</h1>
     <div class="content show" id="copyAccount">
-        <h1 style="color: rgb(50, 212, 50);">BGX</h1>
+        <h1 style="color: rgb(50, 212, 50);" class="no-select">BGX</h1>
         <p>Đăng nhập:</p>
         <div class="account-info">
             <p style="font-weight: bold;">Tên đăng nhập:</p>
@@ -86,11 +86,12 @@
     </div>
 
     <div class="content" id="createAccount">
-        <h1 style="color: rgb(50, 212, 50);">BGX</h1>
+        <h1 style="color: rgb(50, 212, 50);" class="no-select">BGX</h1>
         <p>Tạo acc:</p>
+        <p style="font-weight: bold;">Số hiện tại: 8</p>
         <div class="button-check-container">
-          <button class="button-check">Button 1</button>
-          <button class="button-check">Button 2</button>
+          <button class="button-check red">Giảm</button>
+          <button class="button-check green">Tăng</button>
       </div>
       
         <div class="account-info">
