--- a/index.html
+++ b/index.html
@@ -93,13 +93,7 @@
           <button id="giamSo" class="button-check red">Giảm</button>
           <button id="tangSo" class="button-check green">Tăng</button>
       </div>
-      
-        <div class="account-info">
-            <p style="font-weight: bold;">Tên đăng nhập:</p>
-            <input type="text">
-            <p style="font-weight: bold;">Mật khẩu:</p>
-            <input type="text">
-        </div>
+      <button class="button">Tải AutoHotkey File</button>
     </div>
 
     <div class="content" id="3">
