--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My account</title>
+    <title>Lô đẹp hôm nay - Tip kèo bong bánh</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/football.png">
 </head>
 
 <body>
@@ -93,7 +94,10 @@
           <button id="giamSo" class="button-check red">Giảm</button>
           <button id="tangSo" class="button-check green">Tăng</button>
       </div>
-      <button class="button">Tải AutoHotkey File</button>
+      <a title="Trang chủ Auto Hotkey" href="https://www.autohotkey.com/" ><button class="btn-copy">Tải AutoHotkey File</button></a>
+      <a title="Trang chủ Riot Game" href="https://www.riotgames.com/vi"><button class="btn-copy">Trang chủ Riot Game</button></a>
+      <button class="btn-copy">Copy lệnh vào clipboard</button>
+
     </div>
 
     <div class="content" id="3">
