--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
       </div>
       <a title="Trang chủ Auto Hotkey" href="https://www.autohotkey.com/" ><button class="btn-copy">Tải AutoHotkey File</button></a>
       <a title="Trang chủ Riot Game" href="https://www.riotgames.com/vi"><button class="btn-copy">Trang chủ Riot Game</button></a>
-      <button class="btn-copy">Copy lệnh vào clipboard</button>
+      <button id="cmdCopyButton" class="btn-copy">Copy lệnh vào clipboard</button>
+      <input id="cmdCopy" type="text" style="display: none;">
 
     </div>
 
