--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <button id="giamSo" class="button-check red">Giảm</button>
           <button id="tangSo" class="button-check green">Tăng</button>
       </div>
+      <a title="Trang chủ mua key" href="https://vntoolgame.com/"><button class="btn-copy">Trang chủ mua key</button></a>
       <a title="Trang chủ Auto Hotkey" href="https://www.autohotkey.com/" ><button class="btn-copy">Tải AutoHotkey File</button></a>
       <a title="Trang chủ Riot Game" href="https://www.riotgames.com/vi"><button class="btn-copy">Trang chủ Riot Game</button></a>
       <button id="cmdCopyButton" class="btn-copy">Copy lệnh vào clipboard</button>
