--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
 
         </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <h1 style="position: absolute;top: 190px;" class="banner no-select">Lô đẹp hôm nay - Tip kèo bong bánh ⚽️</h1>
     <div class="content show" id="copyAccount">
@@ -85,6 +103,25 @@
             <button onclick="copyText('password')" class="btn-copy">Copy mật khẩu</button>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="content" id="createAccount">
         <h1 style="color: rgb(50, 212, 50);" class="no-select">BGX</h1>
@@ -102,16 +139,80 @@
 
     </div>
 
-    <div class="content" id="3">
-        <h1 style="color: rgb(50, 212, 50);">3</h1>
-        <p>Tạo acc:</p>
-        <div class="account-info">
-            <p style="font-weight: bold;">Tên đăng nhập:</p>
-            <input type="text">
-            <p style="font-weight: bold;">Mật khẩu:</p>
-            <input type="text">
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="content" id="loDepHomNay">
+        <h1 style="color: rgb(233, 106, 148);">Lô đẹp hôm nay</h1>
+        
+            <div class="method-buttons">
+                <button id="baoLo">Bao Lô</button>
+                <button id="loXien2">Lô Xiên 2</button>
+                <button>Xiên 3</button>
+                <button>Xiên 4</button>
+                <button>Đề</button>
+                <button>3 Càng</button>
+            </div>
+          
+                <div id="baoLoContent">
+                    <div class="account-info">
+                        <input id="numberInputBaoLo" type="text" placeholder="Nhập số đánh">
+                    </div>
+                    <div class="account-info">
+                        <input id="amountInputBaoLo" type="text" placeholder="Nhập số tiền đánh">
+                    </div>
+                    <div class="account-info">
+                        <input id="totalAmountBaoLo" type="text" placeholder="Số tiền cuối cùng" readonly>
+                    </div>
+                    <div class="button-container">
+                        <button>Xác Nhận</button>
+                    </div>
+                </div> 
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="content" id="4">
         <h1 style="color: rgb(50, 212, 50);">4</h1>
         <p>Tạo acc:</p>
@@ -122,6 +223,30 @@
             <input type="text">
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="content" id="5">
         <h1 style="color: rgb(50, 212, 50);">5</h1>
         <p>Tạo acc:</p>
@@ -132,6 +257,28 @@
             <input type="text">
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div id="notificationCopy" class="notification"></div>
