--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <input id="totalAmountBaoLo" type="text" placeholder="Số tiền cuối cùng" readonly>
                     </div>
                     <div class="button-container">
-                        <button>Xác Nhận</button>
+                        <button id="confirmBtn">Xác Nhận</button>
                     </div>
                 </div> 
     </div>
@@ -275,7 +275,13 @@
 
 
 
-
+    <div id="overlay" class="overlay">
+        <div class="confirmation-box">
+            <p>Are you sure?</p>
+            <button id="yesBtn">Yes</button>
+            <button id="noBtn">No</button>
+        </div>
+    </div>
 
 
 
