--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <div id="overlay" class="overlay">
         <div class="confirmation-box">
-            <p>Are you sure?</p>
+            <p style="color: black; font-weight:bold">Are you sure?</p>
             <button id="yesBtn">Yes</button>
             <button id="noBtn">No</button>
         </div>
